--- a/portlandor-scraper/requirements.txt
+++ b/portlandor-scraper/requirements.txt
@@ -17,9 +17,11 @@ django-rest-swagger==2.2.0
 django-test-without-migrations==0.6
 djangorestframework==3.7.7
 djangorestframework-gis==0.12
+et-xmlfile==1.0.1
 execnet==1.6.0
 idna==2.6
 itypes==1.1.0
+jdcal==1.4.1
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 more-itertools==7.0.0
@@ -27,6 +29,7 @@ networkx==2.1
 nose==1.3.7
 numpy==1.14.5
 openapi-codec==1.3.2
+openpyxl==2.6.2
 packaging==16.8
 pandas==0.22.0
 pluggy==0.9.0
@@ -49,3 +52,4 @@ typing==3.6.6
 uritemplate==3.0.0
 urllib3==1.22
 whitenoise==4.0b4
+XlsxWriter==1.1.8
