--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,2 +1,11 @@
-Django>=2.0,<3.0
-psycopg2>=2.7,<3.0
+beautifulsoup4==4.8.0
+bs4==0.0.1
+Django==2.2.3
+numpy==1.17.0
+pandas==0.25.0
+psycopg2==2.8.3
+python-dateutil==2.8.0
+pytz==2019.1
+six==1.12.0
+soupsieve==1.9.2
+sqlparse==0.3.0
