--- a/headless_scraper/scraper/docker-compose.yml
+++ b/headless_scraper/scraper/docker-compose.yml
@@ -10,13 +10,39 @@ services:
     ports:
       - 4444:4444
 
-#Chrome node instance
-  chrome:
-    image: selenium/node-chrome:3
-    links:
+#Fire Fox node instance
+  firefox:
+    image: selenium/node-firefox:latest
+    depends_on:
       - hub
+    environment:
+      - HUB_HOST=hub
+      - HUB_PORT=4444
+
+  db_development:
+    image: postgres
+    restart: always
+    ports:
+      - 5439:5432
+    environment: 
+      - POSTGRES_PASSWORD
+      - DATABASE_OWNER
+      - TEAM_PASSWORD
   
-  # web:
-  #   build: .
-  #   ports:
-  #    - "5000:5000"
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8081
+    volumes:
+      - .:/app
+    ports:
+     - "5000:5000"
+    depends_on:
+      - db_development
+    environment: 
+      - PROJECT_NAME
+      - DEBUG=True
+      - POSTGRES_USER
+      - POSTGRES_HOST
+      - POSTGRES_PORT
+      - POSTGRES_PASSWORD
+      - DJANGO_SECRET_KEY
