--- a/3.php/drupal/docker-compose.yml
+++ b/3.php/drupal/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       POSTGRES_DB: $DB_NAME
       POSTGRES_USER: $DB_USER
     volumes:
-      - 'postgres_sync:/var/lib/postgresql/data:nocopy' # Use bind mount
+      - 'postgres_sync:/var/lib/postgresql/data:nocopy'
   
   nginx:
     image: wodby/nginx:$NGINX_TAG
