Add basic node app

--- a/1.python/django/rest_api/docker-compose.yml
+++ b/1.python/django/rest_api/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
   web:
-    image: radbydesign/django-api:v0.3
+    image: radbydesign/django-api:latest
     command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; python manage.py runserver 0.0.0.0:8000'
     volumes:
       - ./api:/code
