--- a/service/python/django_rest_api/backend/requirements.txt
+++ b/service/python/django_rest_api/backend/requirements.txt
@@ -1,4 +1,25 @@
-django
-django-restframework
-cors
-psycopg2
+asgiref==3.5.0
+certifi==2021.10.8
+charset-normalizer==2.0.11
+colorama==0.4.4
+cors==1.0.1
+Django==4.0.2
+django-environ==0.8.1
+django-restframework==0.0.1
+djangorestframework==3.13.1
+filelock==3.4.2
+future==0.18.2
+gevent==21.12.0
+greenlet==1.1.2
+idna==3.3
+psycopg2==2.9.3
+PySocks==1.7.1
+pytz==2021.3
+requests==2.27.1
+requests-file==1.5.1
+six==1.16.0
+sqlparse==0.4.2
+tldextract==3.1.2
+urllib3==1.26.8
+zope.event==4.5.0
+zope.interface==5.4.0
